styles/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    list-style: none;
}

.wrapper {
    width: 100%;
    max-width: 1440px;
    margin: 0 auto;
}

header {
    height: 80px;
    line-height: 80px;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    background-color: #fff;
    min-height: 80px;
    position: relative;
    z-index: 10; /* Ensure navbar is above other elements */
}

.navbar h2 {
    font-family: "Poppins", sans-serif;
    font-weight: 600;
    font-style: normal;
    font-size: 2rem;
    text-transform: uppercase;
    letter-spacing: 5px;
    margin-left: 18px;
}

.menu {
    position: absolute;
    z-index: 5; /* Lower than the navbar */
    top: -150px; /* Adjust this to initially hide the menu */
    right: 27px;
    text-align: right;
    line-height: 61px;
    transition: top 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
    opacity: 0;
    visibility: hidden;
}

.menu ul li a {
    font-size: 1.2rem;
}

.menu ul li a:hover {
    border-bottom: 5px solid #000;
    padding-bottom: 5px;
    transition: 0.2s ease;
}

.menu.active {
    top: 80px; /* Adjust this value to be just below the navbar */
    opacity: 1;
    visibility: visible;
}

.burger-icon > .fa-bars,
.burger-icon > .fa-x {
    font-size: 25px;
    cursor: pointer;
    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
}

.fa-x {
    opacity: 0;
    visibility: hidden;
    transform: scale(0.8);
    font-size: 10rem;
}

.toggleIcon_close {
    opacity: 1 !important;
    visibility: visible !important;
    transform: rotate(180deg) !important;
    margin-right: 26px;
}

.toggleIcon_open {
    opacity: 0 !important;
    visibility: hidden !important;
    transform: scale(0.8) !important;
    transform: rotate(180deg) !important;
}

.menu ul li a {
    text-decoration: none;
    text-transform: capitalize;
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: #000;
}

/* HERO SECTION STARTS HERE */

.hero-section {
    background: blue;
    height: 200px;
}

